Sync project state
